# anomaly-detection-project

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: model_config.yaml  serving_config.yaml  training_config.yaml
dashboard/: app.py  requirements.txt
data/artifacts/: isolation_forest.joblib  lstm_autoencoder.pt  patchtst.pt  scaler.json
docker/: Dockerfile  Dockerfile.streamlit  docker-compose.yml
migrations/: 001_create_anomaly_events.sql  run.py
scripts/: generate_data.py  log_artifacts.py  run_training.py
src/: __init__.py
src/data/: __init__.py  ingest.py  schemas.py  validate.py
src/features/: __init__.py  engineer.py
src/models/: __init__.py  evaluate.py  isolation_forest.py  lstm_autoencoder.py  patchtst.py  train.py
src/monitoring/: __init__.py  drift.py  metrics.py
src/serving/: config_utils.py  db.py  main.py  middleware.py  predictor.py  router.py  schemas.py
tests/integration/: test_api.py
tests/unit/: test_features.py  test_migrations.py  test_predictor.py  test_schemas.py  test_train.py
